...
            <objects>
                <viewController id="BYZ-38-t0r" customClass="ProgramViewController" customModule="Test_Orange_OCS_iOS" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <searchBar contentMode="redraw" restorationIdentifier="searchBar" placeholder="Film, série, émission ou magazine" showsCancelButton="YES" translatesAutoresizingMaskIntoConstraints="NO" id="YHr-su-gF3">
                                <rect key="frame" x="0.0" y="44" width="390" height="51"/>
                                <textInputTraits key="textInputTraits" returnKeyType="done" enablesReturnKeyAutomatically="YES"/>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="searchBar"/>
                                </userDefinedRuntimeAttributes>
                            </searchBar>
...
                                            <outlet property="subtitleLabel" destination="8Ed-NO-GG2" id="0wi-5C-Zyc"/>
                                            <outlet property="titleLabel" destination="EMM-wA-AxB" id="Hh5-FD-T2A"/>
                                        </connections>
                                    </collectionViewCell>
                                </cells>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="programCollectionView"/>
                                </userDefinedRuntimeAttributes>
                            </collectionView>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                        <constraints>
...
                        <subviews>
                            <stackView opaque="NO" contentMode="scaleToFill" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="g9q-4D-TgX">
                                <rect key="frame" x="5" y="44" width="86" height="35"/>
                                <subviews>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fb6-wE-vWI">
                                        <rect key="frame" x="0.0" y="0.0" width="35" height="35"/>
                                        <accessibility key="accessibilityConfiguration" identifier="backButton"/>
                                        <constraints>
                                            <constraint firstAttribute="width" constant="35" id="8MY-j8-4Lt"/>
                                            <constraint firstAttribute="height" constant="35" id="g66-99-5MZ"/>
                                        </constraints>
                                        <color key="tintColor" systemColor="labelColor"/>
                                        <state key="normal" image="arrow.backward" catalog="system"/>
...
                                                <constraints>
                                                    <constraint firstAttribute="width" secondItem="7Kh-6M-rgU" secondAttribute="height" multiplier="16:9" id="Njo-0n-g3y"/>
                                                </constraints>
                                            </imageView>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="AaD-0O-WxI">
                                                <rect key="frame" x="0.0" y="0.0" width="390" height="219.33333333333334"/>
                                                <accessibility key="accessibilityConfiguration" identifier="playButton"/>
                                                <constraints>
                                                    <constraint firstAttribute="width" secondItem="AaD-0O-WxI" secondAttribute="height" multiplier="16:9" id="1FG-N3-gO5"/>
                                                </constraints>
                                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                <state key="normal" image="PlayButton">
                                                    <preferredSymbolConfiguration key="preferredSymbolConfiguration" weight="regular"/>
...
